test/error/compile_error_type_mismatch/src/CompileErrorTypeMismatch.hx
package;

class CompileErrorTypeMismatch {
	public static function identity(x:String):String {
		return x;
	}
}
